<resources>
    <string name="app_name">Football Scores</string>
    <string name="name_teamA">Team A</string>
    <string name="goals_teamA">0</string>
    <string name="goals_label_teamA">Goals</string>
    <string name="fouls_label_teamA">Fouls</string>
    <string name="fouls_teamA">0</string>
    <string name="goal_button_teamA">Goal</string>
    <string name="foul_button_teamA">Foul</string>
    <string name="name_teamB">Team B</string>
    <string name="goals_teamB">0</string>
    <string name="goals_label_teamB">Goals</string>
    <string name="fouls_teamB">0</string>
    <string name="fouls_label_teamB">Fouls</string>
    <string name="goal_button_teamB">Goal</string>
    <string name="foul_button_teamB">Foul</string>
    <string name="reset">Reset</string>
</resources>
