<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piotrwysocki.footballscores.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/name_teamA"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/goals_teamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/goals_teamA"
                    android:textColor="#000000"
                    android:textSize="45sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/goals_label_teamA"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/fouls_teamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls_teamA"
                    android:textColor="#000000"
                    android:textSize="34sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls_label_teamA"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addGoalForTeamA"
                    android:text="@string/goal_button_teamA" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:onClick="addFoulForTeamA"
                    android:text="@string/foul_button_teamA" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#bdbdbd" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/name_teamB"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/goals_teamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/goals_teamB"
                    android:textColor="#000000"
                    android:textSize="45sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/goals_label_teamB"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/fouls_teamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls_teamB"
                    android:textColor="#000000"
                    android:textSize="34sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls_label_teamB"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addGoalForTeamB"
                    android:text="@string/goal_button_teamB" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:onClick="addFoulForTeamB"
                    android:text="@string/foul_button_teamB" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/table"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:onClick="clearResults"
            android:text="@string/reset" />

    </RelativeLayout>
</ScrollView>